--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,8 @@ inherit_from:
 
 AllCops:
   TargetRubyVersion: 2.2
+  Include:
+    - 'lib/tasks/*.rake'
   Exclude:
     - 'Gemfile'
     - 'bin/**/*'
