--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,13 +17,13 @@ CAP:
   LOG: log/cap.log
   PROFILE_ID_REWRITE_LOG: log/cap_profile_id_rewrite.log
   PORT: 443
-  TOKEN_PASS: something
   TOKEN_PATH: /oauth/token
-  TOKEN_URI: something
-  TOKEN_USER: something
+  TOKEN_URI: authz.stanford.edu
+  TOKEN_USER: sul
+  TOKEN_PASS: something
   AUTHORSHIP_API_PATH: /cap-api/api/cap/v1/authors
   AUTHORSHIP_API_PORT: 443
-  AUTHORSHIP_API_URI: something
+  AUTHORSHIP_API_URI: cap-uat.stanford.edu
 
 ## PubMed Auth Config
 PUBMED:
