--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,11 @@ AllCops:
     - 'spec/teaspoon_env.rb'
     - 'vendor/**/*'
 
+# https://github.com/bbatsov/rubocop/issues/4222
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - "spec/**/*"
+
 Style/VariableName:
   Enabled: false
 
