WebOfScience log level changed to warn
- the info level has high volume and low information value

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -51,7 +51,7 @@ WOS:
     - MEDLINE
   AUTH_CODE: secret
   LOG: log/web_of_science.log
-  LOG_LEVEL: info
+  LOG_LEVEL: warn
 
 DOI:
   BASE_URI: https://dx.doi.org/
