Avoid overwriting WOS records when targeted for "manual" update
This adds tests for the other record types also, which were lacking.

Reworked a `case` statement that had no thing being cased!

Allow moderate nesting depth here, as in our other integration tests.

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -218,6 +218,7 @@ RSpec/NamedSubject:
 RSpec/NestedGroups:
   Exclude:
     - 'spec/api/sul_bib/authorship_api_spec.rb'
+    - 'spec/api/sul_bib/publications_api_spec.rb'
     - 'spec/api/sul_bib/sourcelookup_spec.rb'
     - 'spec/lib/cap/authors_poller_spec.rb'
     - 'spec/lib/csl/citation_spec.rb'
