--- a/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_a_small_Array_String_of_WOS-UIDs.yml
+++ b/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_a_small_Array_String_of_WOS-UIDs.yml
@@ -8,11 +8,11 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.2 (2017-09-14))
       Accept:
       - "*/*"
       Date:
-      - Wed, 07 Feb 2018 22:57:36 GMT
+      - Thu, 08 Feb 2018 19:18:13 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -25,7 +25,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Wed, 07 Feb 2018 22:57:36 GMT
+      - Thu, 08 Feb 2018 19:18:13 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
@@ -224,7 +224,7 @@ http_interactions:
           </wsdl:service>
         </wsdl:definitions>
     http_version: 
-  recorded_at: Wed, 07 Feb 2018 22:57:36 GMT
+  recorded_at: Thu, 08 Feb 2018 19:18:14 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WOKMWSAuthenticate
@@ -235,11 +235,11 @@ http_interactions:
         xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><tns:authenticate></tns:authenticate></soapenv:Body></soapenv:Envelope>
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.2 (2017-09-14))
       Accept:
       - "*/*"
       Date:
-      - Wed, 07 Feb 2018 22:57:36 GMT
+      - Thu, 08 Feb 2018 19:18:14 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -256,11 +256,11 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Wed, 07 Feb 2018 22:57:37 GMT
+      - Thu, 08 Feb 2018 19:18:13 GMT
       Server:
       - Apache-Coyote/1.1
       Set-Cookie:
-      - SID=8BN2sXbodwpyDwgkX5e
+      - SID=6C5XSJ7qsDCrLwnqHOL
       Content-Length:
       - '252'
       Connection:
@@ -268,9 +268,9 @@ http_interactions:
     body:
       encoding: UTF-8
       string: <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:authenticateResponse
-        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>8BN2sXbodwpyDwgkX5e</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
+        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>6C5XSJ7qsDCrLwnqHOL</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Wed, 07 Feb 2018 22:57:37 GMT
+  recorded_at: Thu, 08 Feb 2018 19:18:14 GMT
 - request:
     method: get
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch?wsdl
@@ -279,13 +279,13 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.2 (2017-09-14))
       Accept:
       - "*/*"
       Date:
-      - Wed, 07 Feb 2018 22:57:37 GMT
+      - Thu, 08 Feb 2018 19:18:14 GMT
       Cookie:
-      - SID="8BN2sXbodwpyDwgkX5e"
+      - SID="6C5XSJ7qsDCrLwnqHOL"
       Soapaction:
       - ''
   response:
@@ -296,7 +296,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Wed, 07 Feb 2018 22:57:36 GMT
+      - Thu, 08 Feb 2018 19:18:14 GMT
       Server:
       - Apache-Coyote/1.1
       Transfer-Encoding:
@@ -988,7 +988,7 @@ http_interactions:
           </wsdl:service>
         </wsdl:definitions>
     http_version: 
-  recorded_at: Wed, 07 Feb 2018 22:57:37 GMT
+  recorded_at: Thu, 08 Feb 2018 19:18:14 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch
@@ -1001,13 +1001,13 @@ http_interactions:
         or &quot;Altman,R,B&quot;) AND AD=(stanford)</userQuery><symbolicTimeSpan>4week</symbolicTimeSpan><queryLanguage>en</queryLanguage></queryParameters><retrieveParameters><firstRecord>1</firstRecord><count>100</count><viewField><collectionName>WOS</collectionName><fieldName></fieldName></viewField><viewField><collectionName>MEDLINE</collectionName><fieldName></fieldName></viewField><option><key>RecordIDs</key><value>On</value></option></retrieveParameters></tns:search></soapenv:Body></soapenv:Envelope>
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.2 (2017-09-14))
       Accept:
       - "*/*"
       Date:
-      - Wed, 07 Feb 2018 22:57:37 GMT
+      - Thu, 08 Feb 2018 19:18:14 GMT
       Cookie:
-      - SID="8BN2sXbodwpyDwgkX5e"
+      - SID="6C5XSJ7qsDCrLwnqHOL"
       Soapaction:
       - ''
       Content-Type:
@@ -1022,21 +1022,22 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Wed, 07 Feb 2018 22:57:37 GMT
+      - Thu, 08 Feb 2018 19:18:13 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
-      - '1280'
+      - '1545'
       Connection:
       - keep-alive
     body:
       encoding: UTF-8
       string: |-
-        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>3</recordsFound><recordsSearched>441006</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000419625900016</value><value>WOS:000418800600012</value><value>WOS:000422723300003</value></optionValue><records>&lt;records xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">
+        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>4</recordsFound><recordsSearched>434089</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000419625900016</value><value>WOS:000418800600012</value><value>WOS:000422723300003</value><value>WOS:000422694003088</value></optionValue><records>&lt;records xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000419625900016&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000418800600012&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000422723300003&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000422694003088&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;/records></records></return></ns2:searchResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Wed, 07 Feb 2018 22:57:37 GMT
+  recorded_at: Thu, 08 Feb 2018 19:18:14 GMT
 recorded_with: VCR 4.0.0
