--- a/fixtures/vcr_cassettes/Cap_Client/_working_/returns_true_when_it_can_fetch_author_data.yml
+++ b/fixtures/vcr_cassettes/Cap_Client/_working_/returns_true_when_it_can_fetch_author_data.yml
@@ -14,7 +14,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Fri, 15 Dec 2017 20:40:49 GMT
+      - Thu, 22 Feb 2018 21:49:50 GMT
       Content-Type:
       - application/json
       Authorization:
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 15 Dec 2017 20:40:49 GMT
+      - Thu, 22 Feb 2018 21:49:50 GMT
       Cache-Control:
       - no-store
       Pragma:
@@ -37,11 +37,11 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"access_token":"private_access_token","token_type":"bearer","expires_in":86399,"scope":"profiles.read_all","jti":"087f37ae-1dac-4bc5-8459-847d88539f04"}'
-    http_version: 
-  recorded_at: Fri, 15 Dec 2017 20:40:50 GMT
+    http_version:
+  recorded_at: Thu, 22 Feb 2018 21:49:50 GMT
 - request:
     method: get
-    uri: https://cap-uat.stanford.edu/cap-api/api/cap/v1/authors/41135
+    uri: https://cap-uat.stanford.edu/cap-api/api/cap/v1/authors/4176
     body:
       encoding: UTF-8
       string: ''
@@ -53,7 +53,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Fri, 15 Dec 2017 20:40:50 GMT
+      - Thu, 22 Feb 2018 21:49:50 GMT
       Content-Type:
       - application/json
       Authorization:
@@ -64,7 +64,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 15 Dec 2017 20:40:50 GMT
+      - Thu, 22 Feb 2018 21:49:50 GMT
       Server:
       - Apache/2.2.15 (Oracle)
       Cache-Control:
@@ -93,10 +93,9 @@ http_interactions:
       - application/json;charset=UTF-8
     body:
       encoding: UTF-8
-      string: '{"active":true,"authorModifiedOn":"2017-12-07T11:43:45.000-08:00","importEnabled":false,"importSettings":[{"email":"CAP-UID@stanford.edu","firstName":"John","institution":"Stanford
-        University","lastName":"Wang","middleName":"C Y"}],"lastModified":"2017-12-07T12:15:13.578-08:00","populations":["stanford","stanfordOnly"],"profile":{"displayName":"John
-        Wang","email":"CAP-UID@stanford.edu","meta":{"links":[{"href":"https://cap-uat.stanford.edu/cap-api/api/profiles/v1/41135","rel":"https://cap.stanford.edu/rel/self"},{"href":"https://cap-uat.stanford.edu/john-wang","rel":"https://cap.stanford.edu/rel/public"},{"href":"https://cap-uat.stanford.edu/profiles/auth/frdActionServlet?choiceId=facProfile&profileId=41135","rel":"https://cap.stanford.edu/rel/intranet"},{"href":"https://cap-uat.stanford.edu/profiles/frdActionServlet?choiceId=printerprofile&profileversion=full&profileId=41135","rel":"https://cap.stanford.edu/rel/pdf"},{"href":"https://cap-uat.stanford.edu/cap-api/api/cap/v1/schemas/ProfileDto","rel":"https://cap.stanford.edu/rel/schema"}]},"names":{"legal":{"firstName":"John","lastName":"Wang","middleName":"C"},"preferred":{"firstName":"John","lastName":"Wang","middleName":"C
-        Y"}},"profileId":41135,"uid":"CAP-UID","universityId":"CAP-UniversityID"},"profileId":41135,"visibility":"public"}'
-    http_version: 
-  recorded_at: Fri, 15 Dec 2017 20:40:50 GMT
+      string: '{"active":true,"authorModifiedOn":"2017-12-07T11:43:45.000-08:00","importEnabled":false,"importSettings":[{"email":"CAP-UID@stanford.edu","firstName":"Test","institution":"Stanford
+        University","lastName":"User","middleName":"A"}],"lastModified":"2017-12-07T12:15:13.578-08:00","populations":["stanford","stanfordOnly"],"profile":{"displayName":"Test
+        User","email":"CAP-UID@stanford.edu","meta":{"links":[{"href":"https://cap-uat.stanford.edu/cap-api/api/profiles/v1/4176","rel":"https://cap.stanford.edu/rel/self"},{"href":"https://cap-uat.stanford.edu/test-user","rel":"https://cap.stanford.edu/rel/public"},{"href":"https://cap-uat.stanford.edu/profiles/auth/frdActionServlet?choiceId=facProfile&profileId=4176","rel":"https://cap.stanford.edu/rel/intranet"},{"href":"https://cap-uat.stanford.edu/profiles/frdActionServlet?choiceId=printerprofile&profileversion=full&profileId=4176","rel":"https://cap.stanford.edu/rel/pdf"},{"href":"https://cap-uat.stanford.edu/cap-api/api/cap/v1/schemas/ProfileDto","rel":"https://cap.stanford.edu/rel/schema"}]},"names":{"legal":{"firstName":"Test","lastName":"User","middleName":"C"},"preferred":{"firstName":"Test","lastName":"User","middleName":"A"}},"profileId":4176,"uid":"CAP-UID","universityId":"CAP-UniversityID"},"profileId":4176,"visibility":"public"}'
+    http_version:
+  recorded_at: Thu, 22 Feb 2018 21:49:50 GMT
 recorded_with: VCR 4.0.0
